# chess-engine

./: LICENSE  README.md
aetherchess/engine/: .gitignore  CMakeLists.txt
aetherchess/engine/bitboard/: bitboard.h
aetherchess/engine/core/: position.h
aetherchess/engine/zobrist/: zobrist.h
engine/: .clang-format  CMakeLists.txt  README.md  main.cpp  perft.cpp  perft.h
engine/bitboard/: bitboard.h
engine/core/: position.cpp  position.h  types.h
engine/eval/: eval.cpp  eval.h
engine/movegen/: attacks.cpp  attacks.h  movegen.cpp  movegen.h
engine/zobrist/: zobrist.cpp  zobrist.h
